--- a/ok/bc/bc01-1.1.13.0.0.md
+++ b/ok/bc/bc01-1.1.13.0.0.md
@@ -18,7 +18,7 @@
 鱼蟹之毒。疗狐臭，搽冻疮，取其辛温之性。
 
 【临证应用】本品辛散发表，但为较弱，故多用于感冒之轻证，可煎汤加红糠热服。若外感风寒之重证，则加入辛温解表剂中，作为辅助药，以增强发汗作用，如桂枝汤。用于风寒犯肺，
-痰饮咳喘、胸脘痞胀，可与半夏、黄连等同用，如生姜泻心汤。生姜尤为呕吐要药，随酡伍之不同，可用于胃气上逆的多种呕吐和呃逆之证，常与半夏相配治胃寒之呕吐，即小半夏汤。呕吐偏于热者，则与黄连、竹茹等同用；与丁香、柿蒂配伍，治呃逆有良效。生姜与大枣同用，为调和营卫之剂，以生姜走外，味辛而和卫，大枣入里，味甘而调营，此即古人所说“和卫者必辛，调营者必甘"之意。因进食鱼蟹引起腹痛泄泻，或误食生半夏、生南星中毒而引起的喉舌麻痹，可捣姜汁服或煎汤内服。故姜制半夏、南星可减其毒性。
+痰饮咳喘、胸脘痞胀，可与半夏、黄连等同用，如生姜泻心汤。生姜尤为呕吐要药，随配伍之不同，可用于胃气上逆的多种呕吐和呃逆之证，常与半夏相配治胃寒之呕吐，即小半夏汤。呕吐偏于热者，则与黄连、竹茹等同用；与丁香、柿蒂配伍，治呃逆有良效。生姜与大枣同用，为调和营卫之剂，以生姜走外，味辛而和卫，大枣入里，味甘而调营，此即古人所说“和卫者必辛，调营者必甘"之意。因进食鱼蟹引起腹痛泄泻，或误食生半夏、生南星中毒而引起的喉舌麻痹，可捣姜汁服或煎汤内服。故姜制半夏、南星可减其毒性。
 
 【用量用法】3-10克， 煎汤服，或捣汁冲服。以其性辛温，故于阴虚内热及热盛之证宜忌用。
 
