--- a/ok/bc/bc01-1.1.3.0.0.md
+++ b/ok/bc/bc01-1.1.3.0.0.md
@@ -1,6 +1,6 @@
 ### 紫苏
 
-〔原文〕味辛入气分，色紫入血分，香温散寒，通心理肺，开胃益脾，气香人胃。发汗解肌，
+〔原文〕味辛入气分，色紫入血分，香温散寒，通心理肺，开胃益脾，气香入胃。发汗解肌，
 和血下气<sup>（1）</sup>,宽中消痰,祛风定喘，止痛安胎，
 利大小肠，解鱼蟹毒。多服泄人真气。<small>时珍曰，同陈皮、砂仁，行气安胎； 同藿香、乌药，温中止痛； 同香附，麻黄，发汗解肌；
 同川芎、当归，和血散血； 同桔梗、枳壳，利膈宽肠；同卜子、杏仁，消痰定端；同木瓜、厚朴，散温解暑，治霍乱、脚气。</small>气香者良。宜橘皮。忌鲤鱼。苏子与叶同功，润心肺，尤能下气定喘，止嗽消痰，利膈宽肠，温中开郁<sup>（2）</sup>。<small>有苏子降气汤。
@@ -13,7 +13,7 @@
 
 本品辛温芳香。归脾、肺经，主入气分。不但能发散风寒，
 且可行气宽中，是治外感风寒，发热恶寒，头痛鼻塞，无汗表实证的常用药，又能用于脾肺气滞的咳嗽痰多，胸闷呕恶。然辛散之品，气虚或表虚者忌用。苏梗善理气安胎，气滞胸膈痞闷及胎动
-不安者常用。气机通畅，则胸闷自除，胎得安和。因其理气宽中之性缓和，体虚者更为适宜。苏子专人肺经，以降气消痰为主要功效，常用于痰饮气逆，咳嗽气喘之证。
+不安者常用。气机通畅，则胸闷自除，胎得安和。因其理气宽中之性缓和，体虚者更为适宜。苏子专入肺经，以降气消痰为主要功效，常用于痰饮气逆，咳嗽气喘之证。
 
 【临证应用】紫苏发汗作用不及麻黄、桂枝，多用于外感风寒的轻证，常与荆芥、防风、生姜等同用；兼有咳嗽者，可配杏仁、前胡、桔梗等用，如杏苏散；若兼见气滞胸闷呕恶者，用之更为适宜，可与香附、陈皮等配伍，如香苏散。由于脾胃气滞，
 消化不良，食少，胸闷呕恶或胎动不安，腹胀呕恶，可与蕓香、
