--- a/ok/bc/bc01-1.1.5.0.0.md
+++ b/ok/bc/bc01-1.1.5.0.0.md
@@ -12,7 +12,7 @@
 **防风散邪发表，祛风胜湿止痛，善行周身，为治风通用之品。**
 为伞形科多年生草本植物防风的根。除去芦头上棕毛，晒干，润透切片用。以善袪风邪而得名。
 
-本品辛甘微温，质较柔润。人膀胱、肝、脾三经。具有祛风、解表、胜湿、止痛之功，为治风通用之药。故常用治风寒表证、
+本品辛甘微温，质较柔润。入膀胱、肝、脾三经。具有祛风、解表、胜湿、止痛之功，为治风通用之药。故常用治风寒表证、
 风湿痹证。防风药性缓和，微温而不燥，甘缓而不峻，有"风药中之润剂"之称，故又可用于风热所致的目赤、咽痛等证。此外，对风疹瘙痒及破伤风等证，亦常配用。前者是袪风止痒之功，后者是祛风止痉之效。
 
 【临证应用】 防风多用于外感表证，头痛、身痛等证。如属外感风寒，常与荆芥、白芷等同用；属外感风湿，可与羌活、藁本配伍;若外感风热，发热头痛、目赤，则与荆芥、黄芩、薄荷等同用。风热发疹或皮肤瘙痒，与荆芥、白蒺藜等同用，可祛风止
