--- a/ok/bc/bc00.1-0.2.5.0.0.md
+++ b/ok/bc/bc00.1-0.2.5.0.0.md
@@ -1,6 +1,6 @@
 ### 五．用量：
 
-中药的用量，大多以重量计算。过去用16进位制：1斤=16两=160钱。现在全国已统一采用公制，以克为单位，即1公斤=1000克。为处方和配方简便，制换算成公后的近似值1两=30克，1钱=3克。
+中药的用量，大多以重量计算。过去用16进位制：1斤=16两=160钱。现在全国已统一采用公制，以克为单位，即1公斤=1000克。为处方和配方简便，旧制换算成公制后的近似值1两=30克，1钱=3克。
 
 一般中药常用内服汤剂量约为5一15克。《备要》引《干金》云，“凡药须治择熬泡毕…….”是指出需称量炮制加工后的干燥药材。
 
