--- a/ok/bc/bc00.1-0.2.3.0.0.md
+++ b/ok/bc/bc00.1-0.2.3.0.0.md
@@ -1,6 +1,6 @@
 ### 三、禁忌：
 
-在配伍中己提到相恶、相反两种配伍是临床上应禁忌的。古人将两者范围内的主要药编成歌诀（即十八反歌、十九畏歌），以便初学者熟记。今附录如下，以供参考。
+在配伍中已提到相恶、相反两种配伍是临床上应禁忌的。古人将两者范围内的主要药编成歌诀（即十八反歌、十九畏歌），以便初学者熟记。今附录如下，以供参考。
 十八反歌：本草明言十八反，半蒌贝蔹及攻乌，藻戟遂芫俱战草，诸参辛芍叛藜芦。
 即乌头反半夏、爪蒌．贝母、白蔹、白及，甘草反海藻、大戟、甘遂、芫花；藜芦反人参、沙参、丹参、玄参、细辛、芍药。
 十九畏歌,硫黄原是火中精，朴硝一见便相争·水银莫与砒霜见，狼毒最怕密陀僧。巴豆性烈最为上，偏与牵牛不顺情。丁香莫与郁金见，牙硝难合京三棱。川乌草乌不顺犀，人参最怕五灵脂。官桂善能调冷气，若逢石脂便相欺。大凡修合看顺逆，炮爁炙煿莫相依。
