--- a/ok/bc/bc00.1-0.2.3.0.0.md
+++ b/ok/bc/bc00.1-0.2.3.0.0.md
@@ -7,7 +7,7 @@
 即硫黄畏朴硝，水银畏砒霜，狼毒畏密陀僧，巴豆畏牵牛，丁香畏郁金，牙硝畏三棱，川乌、草乌畏犀角，人参畏五灵脂；官桂畏石脂。
 以上内容，古今都有不同看法，其中有些问题实际有出入，有待深入研究，然而，目前临床仍遵循以上原则。
 
-除了配伍禁忌外，某些药物具有损害胎元以致坠胎的副作用，列为妊振禁忌药。根据药物对于孕妇胎元损害的程度不同，一般分禁忌、慎用二类。禁用药大多毒性较强，药性猛烈．如巴豆、三棱、麝香等，慎用的包括通经去瘀，行气破滞，以及辛热、滑利等药物，如桃仁、肉桂等，但如遇到孕妇病情严重，非用上述药物不能治病时，又得酌情使用。但一般应尽量避免应用，防止发生事故。
+除了配伍禁忌外，某些药物具有损害胎元以致坠胎的副作用，列为妊振禁忌药。根据药物对于孕妇胎元损害的程度不同，一般分禁忌、慎用二类。禁用药大多毒性较强，药性猛烈，如巴豆、三棱、麝香等，慎用的包括通经去瘀，行气破滞，以及辛热、滑利等药物，如桃仁、肉桂等，但如遇到孕妇病情严重，非用上述药物不能治病时，又得酌情使用。但一般应尽量避免应用，防止发生事故。
 附：妊娠服药禁忌歌：
 芫斑水蛭及蟒虫，乌头附子配天雄。野葛水银并巴豆，牛膝薏苡与蜈蚣。三棱芫花代赭麝，大戟蝉蜕黄雌雄。牙硝芒硝牡丹桂，槐花牵牛皂角同。半夏南星与通草，瞿麦干姜桃仁通。硇砂干漆蟹爪甲，地胆茅根都失中。
 
