--- a/ok/gl/gl07-0.2.1.4.0.md
+++ b/ok/gl/gl07-0.2.1.4.0.md
@@ -20,4 +20,10 @@
 
 3.和法的注意事项
 
-凡属邪在疾表，或表邪已全入里者，不宜用。脏气极虚，气血不足之寒热证不宜用，恐贻误病情。
+凡属邪在肌表，或表邪已全入里者，不宜用。脏气极虚，气血不足之寒热证不宜用，恐贻误病情。
+
+------
+
+电子版注：
+
+1、原书有“邪在疾表”字样，应为“邪在肌表”，电子版已改。
