--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -128,6 +128,10 @@
 
 疾病的轻重转化规律就是：部位上由外入里，程度上正气减少、邪气增加为疾病加重；反之部位上由里向外，程度上正气增加、邪气减少为疾病减轻。
 
+> **时气不和，便当早言，寻其邪由，及在腠理（2），以时治之，罕有不愈者。患人忍之，数日乃说，邪气入脏，则难可制。**
+>
+> 《伤寒论讲解-伤寒例》
+
 疾病能够向某部位转化，必然是因为该部位的正气不足，否则不会受邪，即使受邪也会迅速排出。以后我们学习伤寒金匮的时候，无论是伤寒外感六经的传变还是内伤脏腑五行的传变，都是符合此原则的。比如金匮中说“**见肝之病，知肝传脾，当先实脾，四季脾旺不受邪，即勿补之**”，说明虽然肝病倾向于向脾传变，但若脾的正气足，是可以抵御这个过程的。伤寒论中说太阳病可以依次传阳明、少阳、太阴、少阴、厥阴，也经常有不依此次序的情况，即是因为不同人正气程度不同所致。
 
 > 传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力,邪气又可由里达表，由阴出阳，使病向愈。
