--- a/ok/rm/rm000.md
+++ b/ok/rm/rm000.md
@@ -6,7 +6,7 @@
 
 拜光明中医函授大学办公室主任、《光明中医》杂志社社长范竹雯老师为师，刻苦学习光明中医教材。
 
-曾作为科技部原国家中医战略研究课题组长贾谦老师的助理，做了大量民间中医调研工作。
+曾作为科技部国家中医战略研究课题组长贾谦老师的助理，做了大量民间中医调研工作。
 
 现为光明中医网校副校长，主持了光明中医教材1000万字的电子化工作。
 
