--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -1,6 +1,6 @@
 # 第二章 天地自然
 
-## 1 概述：
+## 1 、概述：
 
 绪论中说过，中医把人体看做一个温室花园，而我们生存的自然界则是一个更大的温室花园，两者的运转机制有相似之处，中医中三阴三阳、六气、五行等概念皆来自于自然界。另外人生存于自然界中，其物质与能量都从自然界获得，所以人体受自然界的影响非常大。
 
@@ -168,7 +168,7 @@
 
 
 
-## 2自然界平衡机制：
+## 2、自然界平衡机制：
 
 自然界运转的基本机制是太阳光作用于地球，将能量传递给大地和天空，形成适宜的地气和天气。天地之气互相配合，形成了适于生命生存的气候环境。这个机制中有两大平衡过程要重点考虑：一是太阳阳气与地球阴气的阴阳平衡；二是地球上以地表为分界线，天气和地气之间的平衡。
 
