--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -1,4 +1,4 @@
-## 3.1 人体基本概念及运转机制
+## 3.1、人体基本概念及运转机制
 
 前面天地自然章节提到自然界有两大平衡需要重点关注，即日地平衡和天地平衡。日地平衡是能量与物质的平衡，即太阳能量与自然界物质形成的适度配合状态。天地平衡是气态物质与固液态物质的适度配合状态。
 
@@ -16,11 +16,11 @@
 
 ### 1、基本概念
 
-#### 形
+#### 1.1、形
 
 肉眼可见的人体组织器官都属于形，包括皮、肉、筋、骨、脏腑器官等，对应自然界的土壤。
 
-#### 津、液、痰、饮：
+#### 1.2、津、液、痰、饮：
 
 人体内的水，中医称为津液，对应自然界的水。
 
@@ -36,7 +36,7 @@
 
 不该有的水聚集，为实，叫痰饮。一般将稠厚的叫痰，清稀的叫饮。
 
-#### 血与淤血：
+#### 1.3、血与淤血：
 
 血是水与营养物质混合形成的赤色液态物质，在心肺的共同作用下，在血管中通行全身，具有濡养全身脏腑组织的功能，也对应自然界的水。
 
@@ -48,7 +48,7 @@
 
 淤血与上面提到的痰饮即是身体机能不正常后的病理产物，又会直接或间接的影响脏腑组织的功能，成为新的病因。
 
-#### 元气
+#### 1.4、元气
 
 元气是人体的的初始能量，对应于自然界的阳光。正像阳光的作用是给自然界的土壤、水、空气提供能量一样，人体的元气给形、津液、血、气态物质提供能量，形成合适的人体内环境，各个器官才能完成各自的生命活动
 
@@ -64,7 +64,7 @@
 >
 > 《黄帝内经讲解-阴阳学说-（十六）阳气的重要性》
 
-#### 天气、地气
+#### 1.5、天气、地气
 
 人体的固、液态物质为地气，包括形、津液、血等。人体中的气态物质为天气，包含自然空气以及血、津液蒸化而成的气态物质等。
 
@@ -114,7 +114,7 @@
 >
 > 《黄帝内经讲解-阴阳学说-（十二）阴阳的性质和作用》
 
-#### 精：
+#### 1.6、精：
 
 人体的元气与自然界阳光相对应，都是初始能量。但是阳光来自于太阳物质的核聚变反应，而人体的元气来自于哪里呢？中医认为人体的元气来源于精。
 
@@ -150,7 +150,7 @@
 - 主导人的生殖功能，决定能否有子。
 - 精可以生髓，包括骨髓、脊髓和脑髓（髓由精而生，由液作为补充）
 
-#### 神
+#### 1.7、神
 
 神是人体的管理者，可以调动气、血、津液等资源完成各种功能，对人体的各种平衡起到控制、管理作用。神主要藏于心，五脏皆有。
 
@@ -158,7 +158,7 @@
 >
 > 《中医药学概论-心、小肠》
 
-#### 腠理
+#### 1.8、腠理
 
 腠理是肌表、肌肉、脏腑之间的间隙和纹理。因中医非常关注气态物质，所以腠理这种能流通气态物质的组织间隙对中医有重要作用。
 
@@ -293,9 +293,19 @@
 
 形体为阳，接受脏腑传输来的各种资源，进行使用消耗，像天，以六气划分，即厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。其中气态物质为阳中之阳，津血皮肉筋骨为阳中之阴。因形体以气态物质为主导，所以以阳中之阳的气态物质为主导，即经络通畅为关键。
 
-光明教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。
+光明教材的《中医药学概论》第二章为藏象，第三章为经络，就体现了这两者的重要性。脏腑为形体的根本，两者之间就像树根与枝干的关系。如果脏腑健康，形体有问题，病情相对轻。如果脏腑有问题，即便形体看似健康，病情也相对重。
 
-以上只是粗略的介绍一下人体运转的基本原理和一些基本概念，下面我们要对精、气、神、血、津液等几种资源做更详细的叙述。
+#### 2.3、小节
+
+中医的核心原理即“辩证论治”与“整体观”，两者分别对应本节的两项内容。
+
+“基本原理”中谈到各大要素配合形成适宜体内环境。若这些要素失衡，则不能形成适宜体内环境，即为“证”。证包括虚、实两大类，该有的要素不足即为虚，干扰平衡的因素即为实。分析具体失衡情况，并给出对应调节方法，即为“辩证论治”。
+
+“资源运转”中谈到的内在脏腑产生要素供给外在形体，因此在调理身体、治疗疾病的时候，需要考虑这种因果关系，不能只着眼于一处的病证，需要整体考虑要素的产生与传递关系，寻找真正的根源问题，即为“整体观”。
+
+### 3、小节
+
+人体的概念和运转原理比较复杂，本篇内容只是粗略介绍，下面要对精、气、神、血、津液等几种资源的产生与流转做更详细的叙述。
 
 
 
