--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -1,10 +1,10 @@
-## 3.2津液
+## 3.2、津液
 
 ### 1、津液的代谢过程：
 
 关于津液在人体的代谢过程，中医主要依据《内经》、《难经》等经典中的相关论述。光明教材已经整理出了津液流转的大致过程，如下图所示：
 
-#### 津液代谢图
+#### 1.1、津液代谢图
 
 绿色的线为清，黑色的线为浊。虚线代表循环使用的水。
 
@@ -14,13 +14,13 @@
 
 ![](img/%E6%B4%A5%E6%B6%B2%E4%BB%A3%E8%B0%A2.jpg)
 
-#### 水的吸收过程：
+#### 1.2、水的吸收过程：
 
 水入胃后，偏清的一部分在脾的作用下以气雾的状态上升到肺。偏浊的一部分下降到小肠。
 
 进入小肠的水偏清的部分也通过脾上升到肺。偏浊的部分进入回肠、大肠，在此有一部分进入膀胱，剩余的随大便排出体外。
 
-#### 水的循环过程：
+#### 1.3、水的循环过程：
 
 肺为水之上源，类似一栋大楼的水塔，负责水的分配。此处的水偏清的部分通过肺的宣发作用，到达皮毛。这种宣发作用似乎是以气态的形式进行。偏浊的部分通过三焦散布到全身，此过程称为肃降。
 
@@ -30,7 +30,7 @@
 
 膀胱中的水在阳气作用下还进行一次清浊分离，清者上升到肺，浊者成为小便排出。
 
-#### 资料：
+#### 1.4、资料：
 
 > 饮入于胃，经过胃“游溢精气”，上输于脾；
 >
@@ -104,7 +104,7 @@
 
 ### 2、津液的分类
 
-#### 泣（泪）
+#### 2.1、泣（泪）
 
 水谷入于口而转输到肠胃，所化津液上走泪道者为“泣”
 
@@ -112,19 +112,19 @@
 
 目得肝血的濡养，而能视物，肝血中的津液满溢，则双目润泽。如情志失常，肝气上逆，迫液外泄而为泪，所以泪为肝液所化。
 
-#### 涕：
+#### 2.2、涕：
 
 五藏化液，肺为涕
 
 鼻为呼吸出入之门户，所以鼻为肺之窍，肺的津液上出于鼻为涕，以润鼻窍。
 
-#### 涎
+#### 2.3、涎
 
 涎为口中津液，其中较清稀的为涎。脾开窍于口，脾为胃行其津液，胃中津液，赖脾气的升清作用，才能上出于口，润泽口腔，所以可以认为涎为脾液。
 
 五藏化液，脾为涎
 
-#### 唾
+#### 2.4、唾
 
 “唾”，是口液中较稠厚的部分。肾藏精，主水液，肾脉循喉咙，挟舌本，舌下廉泉、玉英两穴，为液出之通道。所以肾液可循肾脉上注于舌下，出廉泉、玉英而为唾，润泽口舌。
 
@@ -132,7 +132,7 @@
 
 五藏化液，肾为唾
 
-#### 汗
+#### 2.5、汗
 
 心主血，汗为血液所化。津液从中焦进入肺脉，与营气化合，通过心脏的化赤作用，变化为血，汗未出时为津液，储于血中，既出于皮肤则为汗。心主血脉，汗为血之余，所以可以认为汗为心液所化
 
@@ -140,7 +140,7 @@
 
 五藏化液，心为汗
 
-#### 尿
+#### 2.6、尿
 
 水谷所化津液下走膀胱者为“尿”
 
@@ -148,7 +148,7 @@
 >
 > 《黄帝内经讲解-藏象-肾为水脏、主津液代谢》
 
-#### 髓
+#### 2.7髓
 
 水谷所化津液内走骨空者为“髓”，含骨髓、脊髓和脑髓。
 
@@ -156,7 +156,7 @@
 
 > 津与液都属正常的水液，都由水谷精微所化，故常津液并称。津液散布于体表，能温润肌肤；布散于体内，能灌溉脏腑；渗注于空窍，能润泽目、耳、口鼻；浸润于骨节，使关节滑利；流注于骨髓，能补益脑髓，渗灌于血脉，能补充血液。但津与液两者在性质上、分布部位和作用上有所区别，津清稀，流行于表，以温润肌肤。液浓稠，流而不行，故主里，以润泽空窍，滑利关节，补益脑髓。正如张景岳所说：“津液本为同类，然亦有阴阳之分。盖津者，液之清者也；液者，津之浊者也。津为汗而走腠理，故属阳；液注骨补脑*髓*，故属阴。”
 
-#### 小结：
+#### 2.8、小结
 
 泣、涕、涎、唾、尿、汗是津液的外在表现，因此中医通过观察这些物质的状态来判断人体内部津液的状态。若这类体液偏粘稠混浊则代表体内津液偏热，若偏稀薄清冷则代表体内津液偏寒。
 
@@ -204,11 +204,23 @@
 >
 > 《中医药学概论-藏象-脾、胃》
 
+### 3、小节
 
+本篇主要介绍中医理论中人体水液的运转过程。
 
-### 3、疑问：
+水液是人体的重要组成部分，对于维持人体正常生理功能有重要意思，必须正常运转。如果其运转环节中任意节点出现问题，都可能引起对应的病证。
 
-#### 脾的位置？脾切除人依然能活？
+比如脾虚不能运水，可能使水液滞留于胃部，变成痰饮，出现口该渴不渴、甚至背寒如掌大的症状，需要用苓桂术甘汤等方剂进行健脾化水的治疗。
+
+如肺的宣、降水液功能出现问题，导致出现咳、喘的症状。肺气不宣则喘，不降则咳，需要具体情况具体分析。
+
+再或者膀胱的蒸发水液上升功能出现障碍，可使人出现异常的渴，喝水不解渴。如果原因是膀胱受水饮的干扰而功能失常，可以使用五苓散等方剂。
+
+水液代谢的问题如长期不能解决，就会产生各种各样的其它病证，甚至危及心、脑、肺、肾的重要器官，形成严重疾病。而理解水液病证的诊断与治疗方法，需要熟悉水液的运转原理，这就是中医基础理论对中医诊治方法的指导作用。
+
+### 4、疑问：
+
+#### 4.1、脾的位置？脾切除人依然能活？
 
 现在解剖学的脾是西医传入之后，将解剖学发现的一个器官与传统中医中脾的名称对应的。从功能看，脾的功能是从胃中吸收营养，并将营养传递给其他器官。解剖学发现的脾不能完全和传统中医的脾对应。
 
@@ -216,7 +228,7 @@
 
 
 
-#### 三焦的位置？
+#### 4.2、三焦的位置？
 
 三焦的位置目前还有争议，比较倾向于三焦作为胸腹腔的合称。
 
