--- a/ok/rm/rm03-0.7.0.0.0.md
+++ b/ok/rm/rm03-0.7.0.0.0.md
@@ -80,7 +80,7 @@
 >
 > 《云笈七签》
 
-##### 3.2.1、人的意识与思维
+##### 人的意识与思维
 
 内经对人的意识思维过程有相对详细的描述。就是人对外界刺激（感官）产生印象、存储印象变成记忆、对记忆进行分析比较判断产生思虑，最后形成正常对待事物的智力。
 
