--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -144,8 +144,6 @@
 >
 > 《伤寒论讲解-40条》
 
- 
-
 人体生病主要有外感病和内伤病。外感病是外界寒暑之气侵袭形体肌表，使其失衡并由外向内发展。内伤病是各种原因先造成脏腑失衡，并由内向外发展。
 
 通常来说，外感疾病容易先伤三阳经，若入里，先传阳腑，若不入里，也可传于阴经，再传于阴脏。外感初起时内在脏腑未伤，可产生足够正气抵抗外邪，所以以正邪相争的实证为多，此时人体机能多呈现为亢奋状态，所以叫阳证。内伤病，若伤及五脏，则较严重，产生精气血的能力下降，正气不足无力抗邪，成为虚证，此时身体机能多呈现为抑制状态，所以叫阴证。
@@ -160,11 +158,11 @@
 
 在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以五脏为主，用“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
 
-《伤寒论》既论述了健康人体外感风、寒之邪所形成的表病的特点和治法，也论述了原本有内伤病的人感受风寒之邪，病邪由表入里，表病转为里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
+《伤寒论》既论述了健康人外感风、寒之邪而形成表病的表现和治法，也论述了健康人被误治、或其原本就有内伤，形成里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
 
 此外，《伤寒论》主要论述寒邪伤人阳气，形成阳虚寒实格局的处理方法，虽也涉及部分阴虚热实的情况，但还不够详细。后世医家为补其不足，做温病学说，重点论述阴虚热实的辨别与处理方法，其中以吴鞠通所著的《温病条辨》为代表。
 
-由此，《伤寒论》、《金匮要略》、《温病条辨》构成了比较完善的处理各类外感、内伤杂病的中医治疗体系，再结合《黄帝内经》对人体运转机制的讲解，形成了以四大经典为主的中医理论教育体系。
+由此，《伤寒论》、《金匮要略》、《温病条辨》构成了比较完善的处理各类外感、内伤杂病的中医辩证治疗体系，再结合《黄帝内经》对人体运转机制的讲解，形成了以四大经典为主的中医理论教育体系。
 
 
 
