--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -210,13 +210,17 @@
 
 水液是人体的重要组成部分，对于维持人体正常生理功能有重要意思，必须正常运转。如果其运转环节中任意节点出现问题，都可能引起对应的病证。
 
-比如脾虚不能运水，可能使水液滞留于胃部，变成痰饮，出现口该渴不渴、甚至背寒如掌大的症状，需要用苓桂术甘汤等方剂进行健脾化水的治疗。
+比如脾胃负责将饮入的水蒸腾运化出去，如果胃或者脾的功能减弱，则运水能力不够，可能使水液滞留于胃部附近，变成痰饮，出现口该渴不渴、甚至背寒如掌大的症状，需要用苓桂术甘汤等方剂进行健脾化水的治疗。
 
-如肺的宣、降水液功能出现问题，导致出现咳、喘的症状。肺气不宣则喘，不降则咳，需要具体情况具体分析。
+再如肺负责将水宣发到肌表，肃降于全身，如果这些功能出现问题，可导致咳、喘的症状。肺气不宣则喘，不降则咳，需要具体情况具体分析，有麻黄汤、小青龙汤、麻杏石甘汤等方剂可供选择。
 
-再或者膀胱的蒸发水液上升功能出现障碍，可使人出现异常的渴，喝水不解渴。如果原因是膀胱受水饮的干扰而功能失常，可以使用五苓散等方剂。
+再如肾负责净水、运水功能。如果肾阳不足，此功能受损，水在胃、头、肌肉、腿等部位停蓄，造成胃脘部悸动、头眩、身上肌肉跳动、站立不稳、小便不正常、肢体浮肿等症状，可以用真武汤。
 
-水液代谢的问题如长期不能解决，就会产生各种各样的其它病证，甚至危及心、脑、肺、肾的重要器官，形成严重疾病。而理解水液病证的诊断与治疗方法，需要熟悉水液的运转原理，这就是中医基础理论对中医诊治方法的指导作用。
+再如膀胱有蒸发水液上升的功能，如果受水饮之邪的干扰，此功能失常，可使人出现异常的渴，喝水不解渴，且小便不正常的症状，可以使用五苓散等方剂。
+
+水液代谢涉及的病证非常多，需要系统学习，仔细辩证治疗。
+
+水液代谢的问题如长期不能解决，就会引起各种各样的其它病证，甚至危及心、脑、肺、肾等重要器官，形成严重疾病。而理解水液病证的诊断与治疗方法，需要熟悉水液的运转原理，这就是中医基础理论对中医诊治方法的指导作用。
 
 ### 4、疑问：
 
@@ -225,8 +229,6 @@
 现在解剖学的脾是西医传入之后，将解剖学发现的一个器官与传统中医中脾的名称对应的。从功能看，脾的功能是从胃中吸收营养，并将营养传递给其他器官。解剖学发现的脾不能完全和传统中医的脾对应。
 
 有学者研究传统中医的脾可能包含现在解剖发现的脾脏和胰脏。
-
-
 
 #### 4.2、三焦的位置？
 
