--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -158,7 +158,7 @@
 
 在后面要学习的四大经典中，《伤寒论》论外感伤寒，所以以六经为纲，以三阳经开头。《金匮要略》论内伤杂病，以五脏为主，用“见肝之病，知肝传脾，当先实脾”的五行生克制化理论开篇。
 
-《伤寒论》既论述了健康人外感风、寒之邪而形成表病的表现和治法，也论述了健康人被误治、或其原本就有内伤，形成里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
+《伤寒论》既论述了健康人外感风、寒之邪而形成表病的表现和治法，也论述了外感风寒被误治、或其原本就有内伤，形成里病后的一些表现和治法。因此，《伤寒论》既能治疗外感也能治疗内伤，又因其内容论述精准、配方合理，用之于临床常见奇效，所以是中医必学的经典。
 
 此外，《伤寒论》主要论述寒邪伤人阳气，形成阳虚寒实格局的处理方法，虽也涉及部分阴虚热实的情况，但还不够详细。后世医家为补其不足，做温病学说，重点论述阴虚热实的辨别与处理方法，其中以吴鞠通所著的《温病条辨》为代表。
 
