--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -138,6 +138,12 @@
 >
 > 《伤寒论讲解-绪论》
 
+> **伤寒三日，三阳为尽，三阴当受邪⑴。其人反能食而不呕，此为三阴不受邪也⑵**...
+>
+> 太阴病应见腹满而吐，食不下等证，今则反能食而不呕，表明脾胃之气调和而无病。太阴气旺，能为三阴之屏障，则少阴、厥阴也不会受邪，故曰"三阴不受邪”，可见仲景辨传与不传，并不以日数计，而仅依脉证断。
+>
+> 《伤寒论讲解-270条》
+
 中医治病的核心原则就是：对五脏疾病存在严重的正虚邪实的情况，以扶正祛邪的方法，恢复正气，减少邪气，使其向腑病转化，由吐或下的方式排出；或由里病向表病转化，以汗的形式排出。部位由里到外，程度由重向轻，即是常说的“阴证转阳证”，直至治愈。
 
 > 凡由阴证转化为阳证，或由阳证转化为阴证的，即是疾病性质的根本转变。这种转变，常常取决于邪正双方力量的对比。凡正气充足的，大多由阴转阳，疾病向轻浅转化，正气虚衰的，大多由阳转阴，疾病向重深发展。例如：《伤寒论》太阳篇：“病发热头痛，脉反沉，若不差，身体疼痛，当救其里，宜四逆汤。”(92条)《伤寒论》阳明篇：“脉浮而迟，表热里寒，下利清谷者，四逆汤主之。”(225条)这是阳气衰微，正气不足，或治疗失当，重伤其阳，致使阳经之病，从阴化、寒化，转为阴证的证候。
