--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -20,7 +20,7 @@
 
 ## 1、人体天气
 
-人体的天气指的是人体中的气态物质，以空气、水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：营气、卫气、宗气、脏腑之气
+人体的天气指的是人体中的气态物质，以空气、水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：营气、卫气、宗气、脏腑之气。
 
 #### 1.1、营气
 
@@ -108,17 +108,23 @@
 
 ##### 功能：
 
-> 卫气的功能有三个方面：
->
-> 一是护卫肌表，防御外邪。
->
-> 二是温煦脏腑，润泽皮毛。
->
-> 三是司汗孔开合。
+教材总结卫气功能主要有三个方面：
+
+1、保卫肌表，防御外邪。此功能异常，则人有怕风、怕冷之类的症状。
+
+2、温煦脏腑。此功能异常，则人容易有大便稀溏、不喜饮冷水等症状。
+
+3、管理皮肤汗孔的开合。此功能异常，则人的出汗功能有问题。出汗的问题包括该出汗的时候不出，或者不该出汗的时候反而出汗。
+
+> 卫气的功能有三个方面：一是护卫肌表，防御外邪。二是温煦脏腑，润泽皮毛。三是司汗孔开合。
 >
 > 故《灵枢·本藏》说：“卫气者，所以温分肉，充皮肤，肥腠理，司开合者也”、“卫气和，则分肉解利，皮肤润柔，腠理致密矣”。
 >
 > 《中医药学概论-藏象-气》
+
+卫气昼行于形体阳经，夜行于内在脏腑。所以夜晚睡觉的时候，必须盖被子，因此时卫气入里，体表卫气不足，护卫能力不够，容易着凉。
+
+以后学习《伤寒论》，遇到恶寒怕冷、汗出异常、睡眠问题、大便稀溏等症状，常与此处卫气的功能特点有关。
 
 #### 1.3、宗气
 
