--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -16,9 +16,15 @@
 
 #### 1.2、水的吸收过程：
 
-水入胃后，偏清的一部分在脾的作用下以气雾的状态上升到肺。偏浊的一部分下降到小肠。
+水入胃后，通过脾气的转输，分别归藏五脏，变化而为五脏各自所主的水液。
 
-进入小肠的水偏清的部分也通过脾上升到肺。偏浊的部分进入回肠、大肠，在此有一部分进入膀胱，剩余的随大便排出体外。
+> 五液来源于水谷，通过脾气的转输，分别归藏五脏，变化而为五脏各自所主的水液，濡润相关的空窍，是谓五脏化液。
+>
+> 《黄帝内经讲解-藏象学说-五脏与五液的关系》
+
+其中偏清的一部分在脾的作用下以气雾的状态上升到肺。还有偏浊的一部分下降到小肠。
+
+未被胃吸收的水液进入小肠，小肠中偏清的部分也通过脾上升到肺。偏浊的部分进入回肠、大肠，在此有一部分进入膀胱，剩余的随大便排出体外。
 
 #### 1.3、水的循环过程：
 
@@ -29,6 +35,12 @@
 形体中的津液代谢后的形成浊水，浊水归于肾。肾类似废水处理厂，对浊水进行过滤，过滤后的浊水进入膀胱；过滤后的清水通过三焦水道又回到肺，通过肺进行再次分配。
 
 膀胱中的水在阳气作用下还进行一次清浊分离，清者上升到肺，浊者成为小便排出。
+
+> 膀胱贮留的水液，在肾阳的气化作用下，其清者上升于肺，复经肺之宣发，参与全身的水液代谢。其浊者，又在肾阳的气化作用下，变化为尿，排出体外。故膀胱所藏水液复归于肺与排出体外，都是肾阳气化作用的具体表现，所以说“气化则能出焉”。
+>
+> 《黄帝内经讲解-藏象学说-十二脏的生理功能及其相互关系》
+
+
 
 #### 1.4、资料：
 
@@ -96,12 +108,6 @@
 
 
 
-> 膀胱贮留的水液，在肾阳的气化作用下，其清者上升于肺，复经肺之宣发，参与全身的水液代谢。其浊者，又在肾阳的气化作用下，变化为尿，排出体外。故膀胱所藏水液复归于肺与排出体外，都是肾阳气化作用的具体表现，所以说“气化则能出焉”。
->
-> 《黄帝内经讲解-藏象学说-十二脏的生理功能及其相互关系》
-
-
-
 ### 2、津液的分类
 
 #### 2.1、泣（泪）
@@ -158,7 +164,7 @@
 
 #### 2.8、小结
 
-泣、涕、涎、唾、尿、汗是津液的外在表现，因此中医通过观察这些物质的状态来判断人体内部津液的状态。若这类体液偏粘稠混浊则代表体内津液偏热，若偏稀薄清冷则代表体内津液偏寒。
+泣、涕、涎、唾、尿、汗是津液的外在表现，因此中医通过观察这些物质的状态来判断人体内部津液的状态。若这类体液偏粘稠混浊则代表体内对应部位的津液偏热，若偏稀薄清冷则代表偏寒。
 
 > 水液浑浊，皆属于热（18）。诸病水液，澄彻清冷，皆属于寒（19）
 >
