--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -22,13 +22,11 @@
 >
 > 《黄帝内经讲解-藏象学说-五脏与五液的关系》
 
-其中偏清的一部分在脾的作用下以气雾的状态上升到肺。还有偏浊的一部分下降到小肠。
-
 未被胃吸收的水液进入小肠，小肠中偏清的部分也通过脾上升到肺。偏浊的部分进入回肠、大肠，在此有一部分进入膀胱，剩余的随大便排出体外。
 
 #### 1.3、水的循环过程：
 
-肺为水之上源，类似一栋大楼的水塔，负责水的分配。此处的水偏清的部分通过肺的宣发作用，到达皮毛。这种宣发作用似乎是以气态的形式进行。偏浊的部分通过三焦散布到全身，此过程称为肃降。
+脾将水液以气雾的状态上升到肺。肺为水之上源，类似一栋大楼的水塔，负责水的分配。此处的水偏清的部分通过肺的宣发作用，到达皮毛。这种宣发作用似乎是以气态的形式进行。偏浊的部分通过三焦散布到全身，此过程称为肃降。
 
 三焦为水液通道，类似大楼里的水管和水蒸气的通道。
 
