--- a/ok/qs/qs03_13.md
+++ b/ok/qs/qs03_13.md
@@ -14,11 +14,11 @@
 
 **2.九仙散**
 
-**九仙散用乌梅参，拮梗桑皮贝母呈，**
+**九仙散用乌梅参，桔梗桑皮贝母呈，**
 
-**栗売阿胶冬五味，敛肺止咳气能增。**
+**粟壳阿胶冬五味，敛肺止咳气能增。**
 
-木方由乌悔，人参，桔梗，桑白皮，贝母，罂粟売，阿胶，麦门冬，五味子等九味药组成。功能补虚扶正，敛肺止咳。主治虚劳喘咳，曰久不愈，夜间为肾。
+木方由乌梅，人参，桔梗，桑白皮，贝母，罂粟壳，阿胶，麦门冬，五味子等九味药组成。功能补虚扶正，敛肺止咳。主治虚劳喘咳，曰久不愈，夜间为甚。
 
 ### **【涩肠固脱】**
 
