--- a/ok/bc/bc17-0.1.4.0.0.md
+++ b/ok/bc/bc17-0.1.4.0.0.md
@@ -12,7 +12,7 @@
 
 唯本品功偏温补，易于助火、恋邪，故凡外有表邪，内有积滞、气郁湿阻、热毒疮疡以及阴虚等证，皆不宜用。
 
-【临证应用】  黄芪为补气要药，治疗病后气虚体弱，常与人参配伍，加强补气作用。若脾气虚弱，食少便溏，又可配白术等以补气健脾。如配当归，能补气生血，可治气虚血亏。又因其具有升阳作用，可用于中气下陷的久泻脱肛、子宫下垂，如补中益气汤即黄芪配伍党参、升麻、柴胡等补气升阳药。如气虚不能摄血而致便血、崩漏等出血证，可配当归、人参伍用。用于表虚不固的自汗，配防风、白术，以补益卫外之阳气，即玉屏风散；配麻黄根、浮小麦、牡蛎为固表敛汗之剂，即牡蛎散。用黄芪托毒生肌，治疗气血不足，疮痈内陷，或痈疽不溃及溃后久不收口者，配入参、当归、桂心等以生肌敛疮，如托毒黄芪汤。对于气虚失运，水湿停聚的面目四肢浮肿、小便不利，多配茯苓、白术等同用，如防己黄芪汤、防己茯苓汤等可收补气利水之功。
+【临证应用】  黄芪为补气要药，治疗病后气虚体弱，常与人参配伍，加强补气作用。若脾气虚弱，食少便溏，又可配白术等以补气健脾。如配当归，能补气生血，可治气虚血亏。又因其具有升阳作用，可用于中气下陷的久泻脱肛、子宫下垂，如补中益气汤即黄芪配伍党参、升麻、柴胡等补气升阳药。如气虚不能摄血而致便血、崩漏等出血证，可配当归、人参伍用。用于表虚不固的自汗，配防风、白术，以补益卫外之阳气，即玉屏风散；配麻黄根、浮小麦、牡蛎为固表敛汗之剂，即牡蛎散。用黄芪托毒生肌，治疗气血不足，疮痈内陷，或痈疽不溃及溃后久不收口者，配人参、当归、桂心等以生肌敛疮，如托毒黄芪汤。对于气虚失运，水湿停聚的面目四肢浮肿、小便不利，多配茯苓、白术等同用，如防己黄芪汤、防己茯苓汤等可收补气利水之功。
 
 此外，本品配当归、川芎、桃仁、红花等活血祛瘀药，可用于气虚血滞引起的肢体麻木、关节痹痛或半身不遂等证，如补阳还五汤。治气虚津亏的消渴证，则多与生地、麦冬、天花粉等养阴生津药同用，黄芪可益气生津。
 
