--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -114,6 +114,10 @@
 
 人体的脏、腑、皮、肉、筋、骨全身各处，都需要这几大要素的平衡，也都有可能出现各自的失衡。比如肝可以有精的虚实、神的虚实、元气的虚实、天气的虚实、血的虚实等等，肺、心、脾、肾也是如此，皮、肉、筋、骨也是如此。**这类要素的失衡就是中医的证。**辨证论治就是要分辨出哪些部位分别有哪种失衡，进而进行对证治疗。
 
+> 帝曰：人有精气、津液、四肢、九窍、五脏十六部，三百六十五节，乃生百病，百病之生，皆有虚实。
+>
+> 《素问-调经论》
+
 教材《概论》的辨证章节，只是列出了一些常见的情况，比如肝只列出了肝气郁结、肝火上炎、肝火上亢、肝风内动、 肝胆湿热、寒滞肝脉等几种情况，这些应只是常见情况，并非全部，其它也是类似。
 
 从指标角度看，几大指标可以单个失衡也可以组合失衡，阳虚就是单指阳气这指标失衡，痰热就是两个指标失衡，分别为痰和热。比如伤寒论的小陷胸汤证，是心下部位的痰热互结，属于在一个部位（心下）上有两个指标（痰、热）失衡。从部位角度看，也可以有多个部位同时失衡。比如大青龙汤证，是内热外寒，属于内有热、外有寒两个部位的组合失衡。小青龙汤则是外寒内饮，也是两个部位的失衡，分别是外有寒和内有饮。
