--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -210,7 +210,7 @@
 >
 > 《方剂讲解-补益剂》
 
-因为气血比较有代表性，气血充足通常标志精、神、元气、津液等其它要素也充足。反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
+因为气血比较有代表性，所以**气血充足通常标志精、神、元气、津液等其它要素也充足**。反之若气血不足，则需详细查找原因，看哪个要素出问题导致了气血不足。
 
 人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是中医理论中人体平衡的基本原理。
 
@@ -222,7 +222,7 @@
 
 如果人体天气地气受某些因素影响，比如内伤七情、外感六淫等等，则可能失衡。对于这种失衡的描述方式，如果是天气，则有中风、伤寒、中暑等，若有两种以上天气失衡，则有风湿、寒湿、风寒、湿热、暑湿等等描述方法。如果是地气，则有金气太过、火气过旺、水气不足等等描述方法。 
 
-人体内到脏腑、外到皮肉筋骨，全身各处都要求精、神、元气、天气、地气都有合适的度，才能形成适宜的体内环境，各种器官组织才能正常工作。这些要素即是中医所说的正气。人体正气足代表各要素充足且配合协调，所以维持人体环境平衡、抵御失衡的能力强。邪气一词则包括所有破坏平衡的要素，包括不该有的气态物质、痰饮瘀血等液态物质、不正常的固态物质、过度的能量以及各种毒素等等。正气与邪气的关系其实就是维持平衡与破坏平衡的关系。正气的力量大于邪气的力量，人就能保持健康；反之则发病，甚至死亡。
+人体内到脏腑、外到皮肉筋骨，全身各处都要求精、神、元气、天气、地气都有合适的度，才能形成适宜的体内环境，各种器官组织才能正常工作。**这些要素即是中医所说的正气**。人体正气足代表各要素充足且配合协调，所以维持人体环境平衡、抵御失衡的能力强。邪气一词则包括所有破坏平衡的要素，包括不该有的气态物质、痰饮瘀血等液态物质、不正常的固态物质、过度的能量以及各种毒素等等。正气与邪气的关系其实就是维持平衡与破坏平衡的关系。正气的力量大于邪气的力量，人就能保持健康；反之则发病，甚至死亡。
 
 #### 2.2资源运转
 
@@ -305,7 +305,17 @@
 
 ### 3、小节
 
-人体的概念和运转原理比较复杂，本篇内容只是粗略介绍，下面要对精、气、神、血、津液等几种资源的产生与流转做更详细的叙述。
+人体作为一个小自然，与大自然对比理解的话。
+
+大自然的日地平衡，即能量与物质的平衡关系。此平衡在人体为人体元气能量与人体物质的平衡，对于维持人体温度至关重要。
+
+大自然的天地平衡，即气态物质与固液态物质的平衡。此平衡在人为人体气态物质与固液态物质的平衡，即气与血、津液的关系，对于人体行使各种生理功能至关重要。
+
+另外，人体小自然还有内在脏腑产生资源与外在形体消耗资源的平衡，此关系代表了人体的总体健康程度。
+
+以上几种主要平衡关系，中医皆用阴阳概念来表达，如不能清晰理解其内在机理，则容易产生各种误解。
+
+本篇内容只为让大家对人体中医机理有宏观理解，下面要对精、气、神、血、津液等几种资源的产生与流转做更详细的叙述。
 
 
 
