--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -176,6 +176,8 @@
 
 诊断总的原则是，无论望色、切脉还是舌诊，我们都需要先知道正常人的情况是如何的，比如正常的面色是怎样的？正常的脉象是怎样的？正常的舌像是怎样的？然后才能知常达变，通过病人面色、脉象和舌像与正常情况的区别，来分析人体气血失衡的虚实，并施以补泻的调理方案。然后再根据调理后面色、脉象、舌像的变化，来确定调理方向是否正确。如此反复，最终将脉象、舌像调理到正常为止。
 
+
+
 ## 3、判断严重情况
 
 诊断的内容是比较多的，大家慢慢学习。这里先整理一些健康出现严重问题的情况，万一遇到这类问题，要做到心里有数。
@@ -292,7 +294,9 @@
 
 我们要求中医学习者在了解寒热虚实、精神气血等基本概念后，必须掌握诊断的内容。起码对面色、脉诊、舌诊的内容要熟悉。如此，才能在精、神、气、血层面提前预知疾病的发生，而不必像普通人那样，等到疾病发展至形质变化阶段，影响了人体重要功能，才能重视并调理。
 
-初学者要注意诊断要全面，避免在重要方面发生漏诊。比如病人本有里虚，又有外感，如果只看到外感，未能发现里虚，只用了治疗外感的方药。治疗外感的方药往往要调动里部气血走向表部，这样会造成里部虚上加虚，就犯了虚虚之戒，形成严重的里部失衡，有可能给病人造成严重伤害。系统学习中医的意义就是能够全面的看待人体，避免出现这种因医误病的情况。
+初学者要注意诊断要全面，避免在重要方面发生漏诊。内经讲“善诊者，察色按脉，先别阴阳”，这里的阴阳首要是指前述的阴证、阳证，即人体总体上是处于五脏健康、气血充足、抗邪有力的状态，还是五脏虚弱、气血不足、抗邪无力的状态。其次才是一些局部部位的阴阳失衡情况。阴证之人面色晦暗、脉象沉而微弱无力，阳证之人面有光泽、脉象浮而有力。阴阳不分，举手便错！
+
+比如病人本有里部五脏虚弱，又复有外感，如果只看到外感，未能发现里虚，只用了治疗外感的方药。治疗外感的方药往往要调动里部气血走向表部，这样会造成里部虚上加虚，就犯了虚虚之戒，形成严重的里部失衡，有可能给病人造成严重伤害。系统学习中医的意义就是能够全面的看待人体，避免出现这种因医误病的情况。
 
 为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat) 。
 
