--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -5,9 +5,13 @@
 
 通过第三章的学习，我们应该建立起一个人体运行的基本框架。 
 
-1、功能与形体：人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、身躯的皮、肉、脉、筋、骨等形体组织能正常工作。
+#### 1、功能与形体：
 
-2、形体与气血：形体组织能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血等要素维持，因此气血为形体之本。
+人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、身躯的皮、肉、脉、筋、骨等形体组织能正常工作。
+
+#### 2、形体与气血：
+
+形体组织能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血等要素维持，因此气血为形体之本。
 
 > **形与气相任则寿，不相任则夭（l)。皮与肉相果则寿，不相果则夭（2）。血气经络胜形则寿，不胜形则夭（3）。**...
 >
@@ -19,7 +23,7 @@
 
 中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
-3、气血与脏腑经络：
+#### 3、气血与脏腑经络：
 
 气血等要素由脏腑产生，由经络系统主导输送。脏腑功能强健，则可以产生足够气血。脏腑功能虚弱，则气血不足。因此脏腑为气血之本。
 
@@ -29,7 +33,9 @@
 >
 > 《素问•阴阳应象大论》
 
-腑起到辅助作用，除了消化饮食外，还要接收脏在工作中产生的浊气废物，将之排出体外。
+五脏之中，心肺为上焦，主导营卫气血流转于全身，其所需的能量物质来自中下焦的肝、脾、肾。所以五脏以此角度细分的话，中下焦的肝脾肾为上焦心肺之本。
+
+脏腑相比较，腑起到辅助作用，除了消化饮食外，还要接收脏在工作中产生的浊气废物，将之排出体外。
 
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。**此受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
 >
@@ -37,7 +43,7 @@
 
 经络、血脉、三焦作为要素传递通道，需畅通无阻，其中以经络通畅为主导。
 
-4、脏腑与精
+#### 4、脏腑与精
 
 脏腑功能的强健，需要脏腑的阴阳平衡，即能量与物质配合协调。精可以补人一身之阴阳，精足则脏腑不易失衡。精不足则脏腑功能虚弱。精亡则人亡。因此脏腑所藏之精为脏腑之本。
 
@@ -57,7 +63,7 @@
 >
 > 《素问-上古天真论》
 
-5、精与先后天之本
+#### 5、精与先后天之本
 
 脏腑所藏之精分别来自先天与后天。后天之精主要来自脾胃，人无胃气则亡。先天之精主要存于肾，若耗尽，人亦亡。因此脾胃被称为后天之本，肾被称为先天之本。
 
@@ -87,7 +93,7 @@
 >
 > 《灵枢-平人绝谷第三十二》
 
-6、神与其它：
+#### 6、神与其它：
 
 神总管以上全部过程，无论是高级的思维情绪还是低级的人体本能，所有平衡过程都由神来控制。若神的控制能力强，则即便精、气、血、形的数量稍少，也能配合的很好。反之，如果神的控制能力弱，则即便其它要素较多，也可能出现分配不合理的情况。
 
@@ -103,7 +109,11 @@
 >
 > 《黄帝内经讲解-血气精神的重要作用》
 
-人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。这就是中医的整体观。
+#### 7、小结
+
+人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。
+
+其中的多层标本关系皆如树干与树根的关系。根为干之本，树根有问题必然影响树干。树干的问题则可能是树干本身的问题也可能是树根的问题。因此中医治病必求于本，这就是中医的整体观。
 
 ### 2、指标失衡与人体疾病
 
