--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -113,7 +113,15 @@
 
 人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。
 
-其中的多层标本关系皆如树干与树根的关系。根为干之本，树根有问题必然影响树干。树干的问题则可能是树干本身的问题也可能是树根的问题。因此中医治病必求于本，这就是中医的整体观。
+人体有很多因果（标本）关系。上述功能、形体、气血、脏腑经络、精、神是其中比较主要的部分，相互之间皆如树干与树根的关系。根为干之本，树根有问题必然影响树干，而树干的问题则即可能是树干本身的问题也可能是树根的问题。所以中医治病并非哪里发病就治疗哪里，而要分析疾病根源，以治本为主，除非紧急或特殊情况才以治标为先。明辨标本，急则治标，缓则治本，这就是中医的整体观。
+
+> 阴阳者，天地之道也（1），万物之纲纪（2），变化之父母（3），生杀之本始，神明之府也（4），**治病必求于本**（5）。
+>
+> 《素问·阴阳应象大论》
+
+> **夫标本之道，要而博，小而大，可以言一而知百病之害**⑴。言标与本，易而勿损，察本与标，气可令调， 明知胜复，为万民式，天之道毕矣⑵。
+>
+> 《素问•至真要大论》
 
 ### 2、指标失衡与人体疾病
 
