--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -212,7 +212,7 @@
 
 本篇主要介绍中医理论中人体水液的运转过程。
 
-水液是人体的重要组成部分，对于维持人体正常生理功能有重要意思，必须正常运转。如果其运转环节中任意节点出现问题，都可能引起对应的病证。
+水液是人体的重要组成部分，对于维持人体正常生理功能有重要意义，必须正常运转。如果其运转环节中任意节点出现问题，都可能引起对应的病证。
 
 比如脾胃负责将饮入的水蒸腾运化出去，如果胃或者脾的功能减弱，则运水能力不够，可能使水液滞留于胃部附近，变成痰饮，出现口该渴不渴、甚至背寒如掌大的症状，需要用苓桂术甘汤等方剂进行健脾化水的治疗。
 
