--- a/ok/qs/qs03_09.md
+++ b/ok/qs/qs03_09.md
@@ -18,7 +18,7 @@
 
 本方由甘草、人参、白术、干姜等四味药组成。功能温中祛寒。主治中焦虚寒之呕吐、下利、腹痛等症。
 
-本方加附子，名附子理中汤。功能扶阳温中。主治牌胃阳虚之腹痛及霍乱吐利转筋等症。
+本方加附子，名附子理中汤。功能扶阳温中。主治脾胃阳虚之腹痛及霍乱吐利转筋等症。
 
 本方加桂枝，名桂枝人参汤，功能表里双解，主治外见发热恶寒，内有利下不止之证。
 
