--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -28,11 +28,25 @@
 
 从外邪的侵入角度划分，可以分为皮、脉、肉、筋、骨、经、络、脏、腑。
 
-![img](img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16225444722166.png)
+```mermaid
+graph LR
+外邪((外邪))-->皮毛
 
+subgraph three[人体]
+皮毛-->腠理开{腠理开}-->络
 
+腠理开-->肉
+subgraph one[经络脏腑-容易传变]
+络-->经-->腑-->脏
+end
+subgraph two[形体-不易传变]
+肉-->脉-->筋-->骨
+end
+end
 
-如上图所示，外邪先侵袭皮毛，然后或入络经脏腑，或入脉肉筋骨，依次发展。至于走哪条通路，最终到达哪个部位，主要取决于该部位的正邪力量对比。邪气能通过的部位，必然是该位置的正气不足，所谓“邪之所凑，其气必虚”。而正气充足的部位，邪气必然难以通过，即为“正气存内，邪不可干”。
+```
+
+如上图所示，外邪先侵袭皮毛，然后或入络经腑脏，或入肉脉筋骨，依次发展。至于走哪条通路，最终到达哪个部位，主要取决于该部位的正邪力量对比。邪气能通过的部位，必然是该位置的正气不足，所谓“邪之所凑，其气必虚”。而正气充足的部位，邪气必然难以通过，即为“正气存内，邪不可干”。
 
 注意这里的经络也是一种部位，有寒热虚实的失衡。因经络是气的通道，所以变化很快。又因为经络外连皮肉筋骨、内通脏腑，所以涉及范围很广。再因为不同经络互相连接，所以可以互相传递。
 
@@ -48,7 +62,7 @@
 >
 > 《金匮要略讲解-中风历节》
 
-《伤寒论》是论述风寒之邪外袭经络之后的各种表现治法。根据其人本身的健康状态差异，邪气或传或不传，或一日一传，或多日一传，或先作用于太阳经络后传于阳明经、少阳经，再传于三阴经络，或未经阳经直接作用于三阴经，或由经传入脏腑，等等情况，不一而足。邪气作用于不同部位，则有对应表现与治法。
+《伤寒论》是论述风寒之邪外袭皮毛、经络之后的各种表现治法。根据其人本身的健康状态差异，邪气或传或不传，或一日一传，或多日一传，或先作用于太阳经络后传于阳明经、少阳经，再传于三阴经络，或未经阳经直接作用于三阴经，或由经传入脏腑，等等情况，不一而足。邪气作用于不同部位，则有对应表现与治法。
 
 > 所谓传变，则主要是对这一变化的描述，邪气由此经进入彼经，则谓之传。随着邪气的转移，临床证候也必然相应地发生变化,有传必有变，故称传变，也即传经。传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力,邪气又可由里达表，由阴出阳，使病向愈。辨传与不传，传至何经,当以脉证变与不变为据。
 >
