update ok/pwl/pwl-5-09.md. 此处应为黄芪。

--- a/ok/pwl/pwl-5-09.md
+++ b/ok/pwl/pwl-5-09.md
@@ -2,7 +2,7 @@
 
 
 
-黄 （汗少减五分） 苍术（泔浸，去皮） 升麻（以上各一钱） 人参（去芦） 泽泻 神曲（炒黄） 橘皮 白术（以上各五分） 麦门冬（去心） 当归身 炙甘草（以上各三分） 青皮（去白，二分半） 黄柏（酒洗，去皮，二分或三分） 葛根（二分） 五味子（九枚）
+黄芪（汗少减五分） 苍术（泔浸，去皮） 升麻（以上各一钱） 人参（去芦） 泽泻 神曲（炒黄） 橘皮 白术（以上各五分） 麦门冬（去心） 当归身 炙甘草（以上各三分） 青皮（去白，二分半） 黄柏（酒洗，去皮，二分或三分） 葛根（二分） 五味子（九枚）
 
 上件同 咀。都作一服，水二大盏，煎至一盏，去渣，大温服，食远。剂之多少，临病斟酌。
 
