--- a/ok/bc/bc01-1.1.9.0.0.md
+++ b/ok/bc/bc01-1.1.9.0.0.md
@@ -10,7 +10,7 @@
 (2)鼻齆：鼻塞不知香臭。(3)倒睫，指眼睫毛倒人，内刺睛珠，
 涩痛流泪。
 
-**细辛善祛风散寒止痛，温肺化饮，宣通肺窍，具有通彻表里的特点。**为马兜铃科多年生草本植物北细辛或华细辛的全草。习惯以辽宁、吉林等地所产北细辛为佳，所以处方常写北细辛或辽细辛，华细辛则主产陕西。《雷公炮炙论 》 曰：凡使细辛，一 一拣去双叶，服之害人。现全草入药，均不去叶，也无不良反应。
+**细辛善祛风散寒止痛，温肺化饮，宣通鼻窍，具有通彻表里的特点。**为马兜铃科多年生草本植物北细辛或华细辛的全草。习惯以辽宁、吉林等地所产北细辛为佳，所以处方常写北细辛或辽细辛，华细辛则主产陕西。《雷公炮炙论 》 曰：凡使细辛，一 一拣去双叶，服之害人。现全草入药，均不去叶，也无不良反应。
 生用或炙用。
 
 
@@ -20,7 +20,7 @@
 至《备要》云：能入肾润燥，《本草求真》谓：非是火盛水衰，
 阴被阳涸而成，实因阴盛阳衰、火屈于水而致也。遇此辛以除寒，温以燥湿，则阳得解而不凝矣，至于细辛益肝胆，治胆虚惊痫，风眼泪下者，辛温走窜之品，似不相宜。
 
-【临证应用】细辛虽有较好的散寒作用，但发汗力暈较弱，一般解表剂中不作主治药。若阳虚外感，恶寒甚，发热不高，脉反沉者，用本品多与附子、麻黄同用，如麻黄附子细辛汤，细辛外助麻黄以发汗解表，内助附子以扶阳温肾。用于肺寒咳喘，常与麻黄、干姜、五味子同用，与麻黄相配以宣畅肺气；
+【临证应用】细辛虽有较好的散寒作用，但发汗力量较弱，一般解表剂中不作主治药。若阳虚外感，恶寒甚，发热不高，脉反沉者，用本品多与附子、麻黄同用，如麻黄附子细辛汤，细辛外助麻黄以发汗解表，内助附子以扶阳温肾。用于肺寒咳喘，常与麻黄、干姜、五味子同用，与麻黄相配以宣畅肺气；
 配干姜、半夏以温肺化饮；与五味子同用，则开阖并施，散中有收，如小青龙汤。取其辛香走窜之性，与白芷、辛荑、薄荷伍用，可治鼻渊，见鼻塞流涕者。研末吹鼻，可作通窍醒神救急之用。本品还有良好的止痛作用。常配川芎、羌活治风寒之偏正头痛；单用或与白芷同用煎汤，含漱治牙痛；配羌活、秦艽、防风等又治风湿痹痛。药理研究，本品还有局部麻醉作用，对于粘膜浸润及传导麻醉均有效。
 
 【用量用法】	2 — 5克，煎服。外用适量，细辛辛散力
