--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -60,7 +60,7 @@
 
 ## 三、《伤寒论》的主要内容
 
-欲了解《伤寒论》的内容，当先明确“伤寒”的含义。伤寒的含义，秦汉至晋唐即有广义与狭义之分。其广义是指一切外感病的总称，其狭义则是指人体感受风寒之邪，感而即发的病证。《素问·热论》云“今夫热病者，皆伤寒之类也。”晋·葛洪《肘后方》云“贵胜雅言总呼伤寒，世俗因号为时行。”《外台秘要》引许仁则论天行病云。“凡外邪之伤人，尽呼为伤寒”，伤寒“为外感之总称”，皆指广义伤寒而言·《伤寒论·伤寒例》所云“冬时严寒，万类深藏，君子固密，则不伤于寒，触冒之者，乃名伤寒耳。”“中而即病者，名曰伤寒。”则指狭义伤寒而言。”《难经·五十八难》所云“伤寒有五，有中风、有伤寒、有湿温、有热病、有温病。”其中"伤寒有五”之“伤寒"是广义的，“有伤寒”之“伤寒"则是狭义的。但所谓有五，亦仅是举例以言其多，并非拘泥于此五种。可见祖国医学中伤寒一词的含义与现代医学中所说的因伤寒杆菌感染所致之伤寒病的含义完全不同，但若从临床辨证的角度来看，现代医学所说的伤寒病，仍属祖国医学所说的广义伤寒的范围。至于外感病以外的疾病，古人则统称之为，“杂病”。
+欲了解《伤寒论》的内容，当先明确“伤寒”的含义。伤寒的含义，秦汉至晋唐即有广义与狭义之分。其广义是指一切外感病的总称，其狭义则是指人体感受风寒之邪，感而即发的病证。《素问·热论》云“今夫热病者，皆伤寒之类也。”晋·葛洪《肘后方》云“贵胜雅言总呼伤寒，世俗因号为时行。”《外台秘要》引许仁则论天行病云。“凡外邪之伤人，尽呼为伤寒”，伤寒“为外感之总称”，皆指广义伤寒而言·《伤寒论·伤寒例》所云“冬时严寒，万类深藏，君子固密，则不伤于寒，触冒之者，乃名伤寒耳。”“中而即病者，名曰伤寒。”则指狭义伤寒而言。”《难经·五十八难》所云“伤寒有五，有中风、有伤寒、有湿温、有热病、有温病。”其中"伤寒有五”之“伤寒"是广义的，“有伤寒”之“伤寒"则是狭义的。但所谓有五，亦仅是举例以言其多，并非拘泥于此五种。可见祖国医学中伤寒一词的含义与现代医学中所说的因伤寒杆菌感染所致之伤寒病的含义完全不同，但若从临床辨证的角度来看，现代医学所说的伤寒病，仍属祖国医学所说的广义伤寒的范围。至于外感病以外的疾病，古人则统称之为“杂病”。
 
 《伤寒论》是论述狭义伤寒还是广义伤寒？除伤寒之外，有无杂病？这还应当看其具体内容。《伤寒论》之《辨脉法》与《平脉法》两篇专论脉法，其所论较《内》、《难》大有发展，然又与叔和脉法有别，从中似可窥得从《内》、《难》到《脉经》脉法发展演变的形迹。《伤寒例》记述了古人对外感病病因、病理及分类的基本认识，是研究祖国医学对外感病论述的重要文献。《辨痓湿暍脉证》所论痉病、湿病、暍病，多与外邪有关，当属广义伤寒，但只列脉证而不详言治法，则旨在与狭义伤寒相鉴别而设。从《辨太阳病脉证并治上》至《辨厥阴病脉证并治》凡八篇，采用六经分证的方法，对风寒之邪伤人之后，邪气由表入里，由浅入深，由寒化热，由热转寒；正气由盛而转衰，由衰又转复等，这样一个正邪阴阳消长转化过程中所出现的错综复杂的证候，按其发病规律进行分经的辨识与论治，这是本论的核心内容，但主要属于狭义伤寒的范围，尽管也曾论及温病、风温等属广义伤寒的内容，因其无系统辨治方法，也只可看作是与狭义伤寒相鉴别的病证，而与痉、湿、暍列于本论的意义相类。在此八篇中，还有伤寒类证，伤寒兼证，伤寒变证，伤寒夹杂证的辨证与论治，其内容已广泛涉及到杂病范围。《辨霍乱病脉证并治》与《辨阴阳易差后劳复病脉证并治》，论述了霍乱、阴阳易、差后余热、遗寒、正虚、劳复、食复诸证的辨治，或为伤寒类证以资鉴别，或属伤寒病后调治之法以收全功。至于“可与不可”凡八篇，则重集三阳三阴篇中有关内容及不见于三阳三阴篇中的一些条文，按治法及其禁忌归类，为便于临证检索而设。由此可见，《伤寒论》的内容应是以论述狭义伤寒及其演变过程中所出现的诸般病证的证治为主，兼及广义伤寒，并涉大量杂病的证治。有人认为，《伤寒杂病论》一书分为《伤寒论》与《金匮要略》，《伤寒》专论外感，《金匮》专论杂病。其实还应看到，《伤寒》亦论杂病，《金匮》也并非不论伤寒，只是有所侧重而已。因此在学习《伤寒论》时，不仅应注意学习其对伤寒的辨治方法，而且也应注意学习其对杂病的辨治方法。更何况其辨证论治的思维方法对伤寒与杂病的辨治皆有普遍的指导意义，而许多疗效可靠的方药则对外感与杂病又有着广泛的适应性。因此，切不可将《伤寒论》一书囿于治伤寒一病，而应作为一部中医临证医学的基础、辨证论治的专著去学习、去运用。
 
