--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -76,7 +76,7 @@
 
 疾病的发生，总离不开人体的脏腑、经络、营卫、气血。六经辨证也就是把人体所发生的伤寒病证及其演变的全过程，按照脏腑、经络、营卫、气血之所属，寒热虚实之不同，缓急顺逆之差别，进行分类辨析，从而使人们对病变的部位，病证的性质，病势的顺逆等能加以识别，进而作为诊断与治疗的依据。因此，本论所用三阳三阴之名称，并不是一个单纯的代号，而是一个具有病位、病性、病势等多种含义的综合概念。
 
-如三阳病，病位则在三阳经腑，邪气虽盛，但正气未衰，抗邪有力，故病性多热证、实证、阳证，病势虽有缓有急，但多为顺证而易治。举例而论，太阳病为阳证之轻浅者,病变主要在太阳膀胱经腑及其所主之肌表。若风寒之邪外袭，营卫失和，经气不利，阳气抗邪于表，证见脉浮，头痛项强，恶寒发热，则属太阳经表之证。若邪气循经入腑，或邪与水结，膀胱气化不利，证见小便不利与消渴，而为太阳蓄水；或邪与血结，血热瘀阻下焦，证见少腹急结或硬满,其人如狂或发狂，而为太阳蓄血，皆为太阳膀胱腑证。阳明病为阳热证之极重者，病在阳明胃肠经腑、若邪气入里化热，阳气又拒邪有力，致使里热弥漫，充斥周身,证见但热不寒，汗出，脉大，烦渴引饮，则属阳明胃热弥漫证；若热盛津伤，津亏化燥，因燥成实，燥实结于胃肠，证见潮热，谵语，绕脐痛，腹满痛，不大便，则属阳明腑实证。少阳病为阳证之末，亦是邪气由阳入阴之前期，病在少阳胆与三焦经腑，以胆热、气郁、经腑之气俱为不利为主要特征，证见口苦，咽干，目眩，往来寒热，胸胁苦满，嘿嘿不欲饮食，心烦喜呕，脉弦。少阳之气抗邪无力，则病邪可由阳入阴,病证则亦由阳转阴而成三阴病。三阴病，病在三阴经、脏，正气不足，阳气虚衰，邪气亦多从阴化寒，故病性多虚证、寒证、阴证，病势则较沉重而多见逆证。举例而论，太阴病为阴证之轻浅者，病及太阴脾脏，中阳不足，寒湿内盛，运化失司，升降紊乱，证见腹满而吐，食不下，自利不渴。少阴病为阴证之重者，病及少阴心肾，真阴真阳俱衰而又以肾阳虚衰为主，邪气亦多从阴化寒，证见脉微细，但欲寐，下利清谷，畏寒踡卧，四肢厥逆。厥阴病则为阴寒极盛，阳气极衰者。然厥阴肝体阴而用阳，藏血寄相火，邪至厥阴，阴盛阳衰，又每有阴尽阳生，从阴出阳之机，故其病亦或寒或热，或寒热错杂，或厥热往复，其证则以寒热错杂之消渴，气上撞心，心中疼热，饥而不欲食，吐利或吐蛔为代表。如此则伤寒总分六经，六经各有主证，主证各分经腑（或经脏），再加上类证，兼证、变证、夹杂证之辨析，则将伤寒诸证及其合并证、并发证尽皆概括在内。
+如三阳病，病位则在三阳经腑，邪气虽盛，但正气未衰，抗邪有力，故病性多热证、实证、阳证，病势虽有缓有急，但多为顺证而易治。举例而论，太阳病为阳证之轻浅者,病变主要在太阳膀胱经腑及其所主之肌表。若风寒之邪外袭，营卫失和，经气不利，阳气抗邪于表，证见脉浮，头痛项强，恶寒发热，则属太阳经表之证。若邪气循经入腑，或邪与水结，膀胱气化不利，证见小便不利与消渴，而为太阳蓄水；或邪与血结，血热瘀阻下焦，证见少腹急结或硬满,其人如狂或发狂，而为太阳蓄血，皆为太阳膀胱腑证。阳明病为阳热证之极重者，病在阳明胃肠经腑、若邪气入里化热，阳气又拒邪有力，致使里热弥漫，充斥周身,证见但热不寒，汗出，脉大，烦渴引饮，则属阳明胃热弥漫证；若热盛津伤，津亏化燥，因燥成实，燥实结于胃肠，证见潮热，谵语，绕脐痛，腹满痛，不大便，则属阳明腑实证。少阳病为阳证之末，亦是邪气由阳入阴之前期，病在少阳胆与三焦经腑，以胆热、气郁、经腑之气俱为不利为主要特征，证见口苦，咽干，目眩，往来寒热，胸胁苦满，嘿嘿不欲饮食，心烦喜呕，脉弦。少阳之气抗邪无力，则病邪可由阳入阴，病证则亦由阳转阴而成三阴病。三阴病，病在三阴经、脏，正气不足，阳气虚衰，邪气亦多从阴化寒，故病性多虚证、寒证、阴证，病势则较沉重而多见逆证。举例而论，太阴病为阴证之轻浅者，病及太阴脾脏，中阳不足，寒湿内盛，运化失司，升降紊乱，证见腹满而吐，食不下，自利不渴。少阴病为阴证之重者，病及少阴心肾，真阴真阳俱衰而又以肾阳虚衰为主，邪气亦多从阴化寒，证见脉微细，但欲寐，下利清谷，畏寒踡卧，四肢厥逆。厥阴病则为阴寒极盛，阳气极衰者。然厥阴肝体阴而用阳，藏血寄相火，邪至厥阴，阴盛阳衰，又每有阴尽阳生，从阴出阳之机，故其病亦或寒或热，或寒热错杂，或厥热往复，其证则以寒热错杂之消渴，气上撞心，心中疼热，饥而不欲食，吐利或吐蛔为代表。如此则伤寒总分六经，六经各有主证，主证各分经腑（或经脏），再加上类证，兼证、变证、夹杂证之辨析，则将伤寒诸证及其合并证、并发证尽皆概括在内。
 
 由此、可见，六经辨证不仅从病位、病性、病势等多个角度对伤寒病变过程中所发生的证候进行了分类与辨识，又揭示了这一过程中所出现的既不相同而又相互联系的六个阶段之间的关系，同时也体观了六经分阴阳，阴阳又统摄表里、寒热、虚实等八纲分证的辩证思维方法。这对后世八纲辨证，脏腑经络辨证，气血津液辨证，乃至卫气营血辨证与三焦辨证诸方法的逐步完善或创立，有着深刻的启迪，故可谓中医辨证学之先驱，而辨证论治的诊疗方法亦从此在中医临证医学上确立下来，并且一直延用到今天。仲景的这一贡献可谓大矣。
 
