--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -1,4 +1,4 @@
-# 绪论&
+# 绪论
 
 [TOC]
 
@@ -76,13 +76,13 @@
 
 疾病的发生，总离不开人体的脏腑、经络、营卫、气血。六经辨证也就是把人体所发生的伤寒病证及其演变的全过程，按照脏腑、经络、营卫、气血之所属，寒热虚实之不同，缓急顺逆之差别，进行分类辨析，从而使人们对病变的部位，病证的性质，病势的顺逆等能加以识别，进而作为诊断与治疗的依据。因此，本论所用三阳三阴之名称，并不是一个单纯的代号，而是一个具有病位、病性、病势等多种含义的综合概念。
 
-如三阳病，病位则在三阳经腑，邪气虽盛，但正气未衰，抗邪有力，故病性多热证、实证、阳证，病势虽有缓有急，但多为顺证而易治。举例而论，太阳病为阳证之轻浅者,病变主要在太阳膀胱经腑及其所主之肌表。若风寒之邪外袭，营卫失和，经气不利，阳气抗邪于表，证见脉浮，头痛项强，恶寒发热，则属太阳经表之证。若邪气循经入腑，或邪与水结，膀胱气化不利，证见小便不利与消渴，而为太阳蓄水；或邪与血结，血热瘀阻下焦，证见少腹急结或硬满,其人如狂或发狂，而为太阳蓄血，皆为太阳膀胱腑证。阳明病为阳热证之极重者，病在阳明胃肠经腑、若邪气入里化热，阳气又拒邪有力，致使里热弥漫，充斥周身,证见但热不寒，汗出，脉大，烦渴引饮，则属阳明胃热弥漫证；若热盛津伤，津亏化燥，因燥成实，燥实结于胃肠，证见潮热，谵语，绕脐痛，腹满痛，不大便，则属阳明腑实证。少阳病为阳证之末，亦是邪气由阳入阴之前期，病在少阳胆与三焦经腑，以胆热、气郁、经腑之气俱为不利为主要特征，证见口苦，咽干，目眩，往来寒热，胸胁苦满，嘿嘿不欲饮食，心烦喜呕，脉弦。少阳之气抗邪无力，则病邪可由阳入阴，病证则亦由阳转阴而成三阴病。三阴病，病在三阴经、脏，正气不足，阳气虚衰，邪气亦多从阴化寒，故病性多虚证、寒证、阴证，病势则较沉重而多见逆证。举例而论，太阴病为阴证之轻浅者，病及太阴脾脏，中阳不足，寒湿内盛，运化失司，升降紊乱，证见腹满而吐，食不下，自利不渴。少阴病为阴证之重者，病及少阴心肾，真阴真阳俱衰而又以肾阳虚衰为主，邪气亦多从阴化寒，证见脉微细，但欲寐，下利清谷，畏寒踡卧，四肢厥逆。厥阴病则为阴寒极盛，阳气极衰者。然厥阴肝体阴而用阳，藏血寄相火，邪至厥阴，阴盛阳衰，又每有阴尽阳生，从阴出阳之机，故其病亦或寒或热，或寒热错杂，或厥热往复，其证则以寒热错杂之消渴，气上撞心，心中疼热，饥而不欲食，吐利或吐蛔为代表。如此则伤寒总分六经，六经各有主证，主证各分经腑（或经脏），再加上类证，兼证、变证、夹杂证之辨析，则将伤寒诸证及其合并证、并发证尽皆概括在内。
+如三阳病，病位则在三阳经腑，邪气虽盛，但正气未衰，抗邪有力，故病性多热证、实证、阳证，病势虽有缓有急，但多为顺证而易治。举例而论，太阳病为阳证之轻浅者,病变主要在太阳膀胱经腑及其所主之肌表。若风寒之邪外袭，营卫失和，经气不利，阳气抗邪于表，证见脉浮，头痛项强，恶寒发热，则属太阳经表之证。若邪气循经入腑，或邪与水结，膀胱气化不利，证见小便不利与消渴，而为太阳蓄水；或邪与血结，血热瘀阻下焦，证见少腹急结或硬满,其人如狂或发狂，而为太阳蓄血，皆为太阳膀胱腑证。阳明病为阳热证之极重者，病在阳明胃肠经腑、若邪气入里化热，阳气又拒邪有力，致使里热弥漫，充斥周身，证见但热不寒，汗出，脉大，烦渴引饮，则属阳明胃热弥漫证；若热盛津伤，津亏化燥，因燥成实，燥实结于胃肠，证见潮热，谵语，绕脐痛，腹满痛，不大便，则属阳明腑实证。少阳病为阳证之末，亦是邪气由阳入阴之前期，病在少阳胆与三焦经腑，以胆热、气郁、经腑之气俱为不利为主要特征，证见口苦，咽干，目眩，往来寒热，胸胁苦满，嘿嘿不欲饮食，心烦喜呕，脉弦。少阳之气抗邪无力，则病邪可由阳入阴，病证则亦由阳转阴而成三阴病。三阴病，病在三阴经、脏，正气不足，阳气虚衰，邪气亦多从阴化寒，故病性多虚证、寒证、阴证，病势则较沉重而多见逆证。举例而论，太阴病为阴证之轻浅者，病及太阴脾脏，中阳不足，寒湿内盛，运化失司，升降紊乱，证见腹满而吐，食不下，自利不渴。少阴病为阴证之重者，病及少阴心肾，真阴真阳俱衰而又以肾阳虚衰为主，邪气亦多从阴化寒，证见脉微细，但欲寐，下利清谷，畏寒踡卧，四肢厥逆。厥阴病则为阴寒极盛，阳气极衰者。然厥阴肝体阴而用阳，藏血寄相火，邪至厥阴，阴盛阳衰，又每有阴尽阳生，从阴出阳之机，故其病亦或寒或热，或寒热错杂，或厥热往复，其证则以寒热错杂之消渴，气上撞心，心中疼热，饥而不欲食，吐利或吐蛔为代表。如此则伤寒总分六经，六经各有主证，主证各分经腑（或经脏），再加上类证，兼证、变证、夹杂证之辨析，则将伤寒诸证及其合并证、并发证尽皆概括在内。
 
-由此、可见，六经辨证不仅从病位、病性、病势等多个角度对伤寒病变过程中所发生的证候进行了分类与辨识，又揭示了这一过程中所出现的既不相同而又相互联系的六个阶段之间的关系，同时也体观了六经分阴阳，阴阳又统摄表里、寒热、虚实等八纲分证的辩证思维方法。这对后世八纲辨证，脏腑经络辨证，气血津液辨证，乃至卫气营血辨证与三焦辨证诸方法的逐步完善或创立，有着深刻的启迪，故可谓中医辨证学之先驱，而辨证论治的诊疗方法亦从此在中医临证医学上确立下来，并且一直延用到今天。仲景的这一贡献可谓大矣。
+由此可见，六经辨证不仅从病位、病性、病势等多个角度对伤寒病变过程中所发生的证候进行了分类与辨识，又揭示了这一过程中所出现的既不相同而又相互联系的六个阶段之间的关系，同时也体现了六经分阴阳，阴阳又统摄表里、寒热、虚实等八纲分证的辩证思维方法。这对后世八纲辨证，脏腑经络辨证，气血津液辨证，乃至卫气营血辨证与三焦辨证诸方法的逐步完善或创立，有着深刻的启迪，故可谓中医辨证学之先驱，而辨证论治的诊疗方法亦从此在中医临证医学上确立下来，并且一直延用到今天。仲景的这一贡献可谓大矣。
 
 2．六经的传变
 
-由于正气有强弱，邪气有盛衰，正邪相争，阴阳进退，就使六经病证经常处于一个不断变化的状态。所谓传变，则主要是对这一变化的描述，邪气由此经进入彼经，则谓之传。随着邪气的转移，临床证候也必然相应地发生变化,有传必有变，故称传变，也即传经。传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力,邪气又可由里达表，由阴出阳，使病向愈。辨传与不传，传至何经,当以脉证变与不变为据。预知传与不传，对掌握治疗与预防的主动权有非常积极的意义。
+由于正气有强弱，邪气有盛衰，正邪相争，阴阳进退，就使六经病证经常处于一个不断变化的状态。所谓传变，则主要是对这一变化的描述，邪气由此经进入彼经，则谓之传。随着邪气的转移，临床证候也必然相应地发生变化，有传必有变，故称传变，也即传经。传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力，邪气又可由里达表，由阴出阳，使病向愈。辨传与不传，传至何经，当以脉证变与不变为据。预知传与不传，对掌握治疗与预防的主动权有非常积极的意义。
 
 3．六经发病的特殊形式——合病、并病、两感与直中
 
@@ -93,7 +93,6 @@
 ### （二）关于方剂学成就。
 
 《伤寒论》所载方剂，大多用药精当，配伍严谨，疗效可靠，至今沿用不衰，故后世誉之为“方书之祖”。本论虽载112方，但其意义与价值却远远超出了这些方剂的本身。晋·皇甫谧《甲乙经·序》云：“伊尹以亚圣之才，撰用《神农本草》，以为《汤液》”，“仲景论广伊尹《汤液》为数十卷，用之多验”。严器之《注解伤寒论·序》云：“伊尹以元圣之才撰成《汤液》，俾黎庶之疾疚，咸遂蠲除，使万代之生灵，普蒙拯济。后汉张仲景，又广《汤液》为《伤寒卒病论》十数卷，然后医方大备”。《伤寒杂病论序》又有“博采众方”之语。从而可以看出，仲景在方剂学方面，继承了汉以前的复方成就，特别是对《汤液经》进行了研究、继承、发扬与推广，从而便使汤液治病法流传发展至今，在当今汤液治病已成为极其普遍的治病方法而广泛应用的时候，其中则有着仲景的不可磨灭的贡献。尤其重要的是，仲景把复方的应用与在基础理论指导下的辨证结合起来，法随证立，方从法出，创立了理法方药兼备的辨证与论治相结合的诊疗体系，这就使祖国医学的诊疗程序臻于完备，为临证医学的发展树立了里程碑。此外，本论所用112方包括了汗、吐、下、清，消、和、温、补、涩诸法的运用，并对各法的适应证、禁忌证，具体施用方法及注意事项，大多有详尽论述，皆为后世之所本。论中所载剂型，涉汤、丸、散、膏、浸剂、酒剂。混悬剂、唅剂、灌肠剂、肛门栓剂等等，其制备与应用方法皆有详述，开中医药剂
-
 技术发展之先河。在选药与组方上，谨守病机，严遵法度；君臣佐使，相得益彰；药量适宜，分铢权衡；药专力宏，功效卓著；随证化裁，灵活变通，堪称方剂之典范。后世称其为“经方”，则已非汉人将经验用方称之谓“经方“之意，而是指方剂的楷模、标准、典范。这些成就，都为中医方剂学的发展奠定了基础。此外，所倡汤液与针灸并用之法，也很有临证意义。
 
 ## 五、学习《伤寒论》的方法
