--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -38,7 +38,7 @@
 
 5．小儿病部分：在今本《金匮要略》中仅存一方，在今本《脉经》中尚存一篇，但阙文极多。
 
-6。食禁部分：在今本《金匮要略》中有二篇。
+6．食禁部分：在今本《金匮要略》中有二篇。
 
 仅从以上内容看，《伤寒杂病论》足可以称得上是中医临证医学的奠基著作。
 
