--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -72,7 +72,7 @@
 
 1．六经辨证的基本概念
 
-六经辨证是后人对《伤寒论》中太阳、阳明、少阳、太阴、少阴、厥阴等三阳三阴辨证方法的简称。从《伤寒杂病论序》所云撰用《素问》之语及《伤寒例》所引《素问·热论》之言来看，仲景所创六经辨证之法，显然曾受到过《热论》六经分证之启迪，因此它便具有一定的继承性。但《热论》的六经分证，只讲经络的热实证，治法也仅有刺、泄二法，未见方药。本论所述六经辨证，却是脏腑、经络、气血、阴阳、表里、寒热、虚实诸证尽皆包括在内，而且理法方药皆备,已是一个临床实用的辨证论治体系。
+六经辨证是后人对《伤寒论》中太阳、阳明、少阳、太阴、少阴、厥阴等三阳三阴辨证方法的简称。从《伤寒杂病论序》所云撰用《素问》之语及《伤寒例》所引《素问·热论》之言来看，仲景所创六经辨证之法，显然曾受到过《热论》六经分证之启迪，因此它便具有一定的继承性。但《热论》的六经分证，只讲经络的热实证，治法也仅有刺、泄二法，未见方药。本论所述六经辨证，却是脏腑、经络、气血、阴阳、表里、寒热、虚实诸证尽皆包括在内，而且理法方药皆备，已是一个临床实用的辨证论治体系。
 
 疾病的发生，总离不开人体的脏腑、经络、营卫、气血。六经辨证也就是把人体所发生的伤寒病证及其演变的全过程，按照脏腑、经络、营卫、气血之所属，寒热虚实之不同，缓急顺逆之差别，进行分类辨析，从而使人们对病变的部位，病证的性质，病势的顺逆等能加以识别，进而作为诊断与治疗的依据。因此，本论所用三阳三阴之名称，并不是一个单纯的代号，而是一个具有病位、病性、病势等多种含义的综合概念。
 
