--- a/ok/fjx/fjx05-0.3.0.0.0.md
+++ b/ok/fjx/fjx05-0.3.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔煎服法〕上三味以水三升，煮取一升二盒，去滓，分温再服，强人可大附子一枚，干姜三两。现代用法：水煎服。
 
-{讲解〕本方用以治阴寒内盛，心肾阳虚，虚阳暴脱真阳衰微之证。主治伤寒少阴病，四肢厥逆，恶寒踡卧，下利清谷，口不渴，脉沉。伤寒太阳病，误汗亡阳。伤寒太阴病，吐利腹痛，四肢厥逆。本方是回阳救逆法中的主要方剂，具有回阳救逆的作用。方中生附子大辛大热为壮肾阳祛寒救逆的要药为君。干姜温中散寒，助附子壮肾阳为辅。佐以甘草和中益气，有补正安中，制约附、姜大辛大热之性，以防重劫阴液之弊，又有调和诸药的作用。
+〔讲解〕本方用以治阴寒内盛，心肾阳虚，虚阳暴脱真阳衰微之证。主治伤寒少阴病，四肢厥逆，恶寒踡卧，下利清谷，口不渴，脉沉。伤寒太阳病，误汗亡阳。伤寒太阴病，吐利腹痛，四肢厥逆。本方是回阳救逆法中的主要方剂，具有回阳救逆的作用。方中生附子大辛大热为壮肾阳祛寒救逆的要药为君。干姜温中散寒，助附子壮肾阳为辅。佐以甘草和中益气，有补正安中，制约附、姜大辛大热之性，以防重劫阴液之弊，又有调和诸药的作用。
 
 本方所治之厥逆，非属阳虚者勿用。
 
