update ok/pwl/pwl-5-10.md. 增加 䐜 字。

--- a/ok/pwl/pwl-5-10.md
+++ b/ok/pwl/pwl-5-10.md
@@ -1,8 +1,7 @@
 # 随时加减用药法
 
 
-
-浊气在阳，乱于胸中，则 满闭塞，大便不通。夏月宜少加酒洗黄柏大苦寒之味，冬月宜加吴茱萸大辛苦热之药以从权，乃随时用药，以泄浊气之不降也。借用大寒之气于甘味中，故曰甘寒泻热火也。亦须用发散寒气，辛温之剂多，黄柏少也。
+浊气在阳，乱于胸中，则䐜满闭塞，大便不通。夏月宜少加酒洗黄柏大苦寒之味，冬月宜加吴茱萸大辛苦热之药以从权，乃随时用药，以泄浊气之不降也。借用大寒之气于甘味中，故曰甘寒泻热火也。亦须用发散寒气，辛温之剂多，黄柏少也。
 
 清气在阴者，乃人之脾胃气衰，不能升发阳气，故用升麻、柴胡助辛甘之味，以引元气之升，不令飧泄也。
 
