--- a/ok/bc/bc01-1.1.11.0.0.md
+++ b/ok/bc/bc01-1.1.11.0.0.md
@@ -2,7 +2,7 @@
 
 〔原文〕**甘苦性温。能发汗散风湿，上通脑项，下行足膝，外达皮肤。治头痛目暗，齿痛鼻渊，肢挛痹痛，瘰疬疮疖**，<small>采根叶熬，名万应膏</small>。**遍身瘙痒**。<small>做浴汤佳</small>。**去刺，酒拌蒸。忌猪肉**。<small>《圣惠方》曰：叶捣汁，治产后痢。</small>
 
-【讲解】苍耳子有祛风湿、通鼻窍的功用。为菊科一年生草本植物苍耳的果实。《本经 > 名萁耳实。采后晒干，去刺入药。
+【讲解】苍耳子有祛风湿、通鼻窍的功用。为菊科一年生草本植物苍耳的果实。《本经》名葈耳实。采后晒干，去刺入药。
 
 本品味苦辛，性温，有小毒。人肺经。苦可燥，辛能敬，温能通，故有通鼻窍，祛风湿，止痛之功。长于疏散宣通，能上达
 巅顶，下走足膝，内通筋骨，外达皮肤，可祛一切风湿之邪。凡风湿郁遏于上的头痛鼻渊，侵于筋骨的风湿痹痛，淫于皮肤的疮疹瘙痒等，均可应用。瘰疬一般不用。
