--- a/ok/bc/bc01-1.1.12.0.0.md
+++ b/ok/bc/bc01-1.1.12.0.0.md
@@ -7,7 +7,7 @@
 
 **香薷发汗、利水，为祛暑解表要药。**为唇形科多年生草木植物海州香薷的带花全草。生用，切段入药。
 
-本品味辛，性微温，气芳香。入肺、胃经。具有发汗解表，祛暑化湿，利水消肿之功。既能外祛暑邪而解表，又能内化湿浊而和中。前人云夏月之用香薷，犹冬月之用麻黄。可见发汗之力较强，故善治夏月外伤于寒，内伤于湿，阳气被阴邪所遏，症见恶寒发热，胸闷无汗及腹痛吐泻等阴暑病证。本品能发越阳
+本品味辛，性微温，气芳香。入肺、胃经。具有发汗解表，祛暑化湿，利水消肿之功。既能外祛暑邪而解表，又能内化湿浊而和中。前人云：夏月之用香薷，犹冬月之用麻黄。可见发汗之力较强，故善治夏月外伤于寒，内伤于湿，阳气被阴邪所遏，症见恶寒发热，胸闷无汗及腹痛吐泻等阴暑病证。本品能发越阳
 气，通利水湿，故水肿、小便不利之证，用之有效。
 
 本品主要用作夏令"阴暑”的解表药。若夏伤暑热引起的壮热、烦渴、大汗等“阳暑"病证，非其适用范围，则应忌用。因此，不能视本药为通治一切暑证之品。正如《本草正义》所说：香薷为治暑要药者，亦指夏月受凉，外寒闭其内热,有发热、恶寒、头痛等证，则香薷通阳解表，是其专职，而又能导水利湿，更与夏日湿热郁蒸、膀胱不利者相合，非谓夏天百病，香薷一物能通治之也。
