--- a/ok/bc/bc01-1.1.13.0.0.md
+++ b/ok/bc/bc01-1.1.13.0.0.md
@@ -1,6 +1,6 @@
 ### 生 姜
 
-〔原文〕辛温。行阳分而祛寒发表,宣肺气而解郁调中，畅胃口而开痰下食。治伤寒头痛，伤风，鼻塞,<small>辛能入肺，通气散寒</small>。咳逆呕哕，<small>有声有物为呕，有声无物为哕，有物无声为吐。其证或因寒、因热、因食、因痰，气逆上冲而然。生姜能散逆气，呕家圣药。东垣曰：辛药生姜之类治呕吐，但治上焦气壅表实之病。若胃虚谷气不行，胸闭塞而呕者，惟宜益胃推扬谷气而已，勿作表实用辛药泻之。丹溪曰：阴分咳嗽者，多属阴虚，宜用贝母，勿用生姜，以其辛散也。昂按：人特知陈皮、生姜能止呕，不知亦有发呕之时，以其性上升，如胃热者非所宜也。藿香亦然。</small>胸壅痰膈,寒痛湿泻。消水气，行血痹<sup>(1)</sup>，<small>产后血上冲心，及污秽不尽，煎服亦良。</small>通神明，去秽恶，救暴卒，<small>凡中风、中气、中暑、中恶、暴卒等证，姜汁和童便饮效。姜汁开痰，童便降火也</small>。疗狐臭<sup>(2)</sup>，<small>姜汁频涂</small>。搽冻耳。<small>熬膏涂</small>。杀半夏、南星、菌蕈、野禽毒，<small>野禽多食半夏，
+〔原文〕辛温。行阳分而祛寒发表，宣肺气而解郁调中，畅胃口而开痰下食。治伤寒头痛，伤风，鼻塞,<small>辛能入肺，通气散寒</small>。咳逆呕哕，<small>有声有物为呕，有声无物为哕，有物无声为吐。其证或因寒、因热、因食、因痰，气逆上冲而然。生姜能散逆气，呕家圣药。东垣曰：辛药生姜之类治呕吐，但治上焦气壅表实之病。若胃虚谷气不行，胸闭塞而呕者，惟宜益胃推扬谷气而已，勿作表实用辛药泻之。丹溪曰：阴分咳嗽者，多属阴虚，宜用贝母，勿用生姜，以其辛散也。昂按：人特知陈皮、生姜能止呕，不知亦有发呕之时，以其性上升，如胃热者非所宜也。藿香亦然。</small>胸壅痰膈，寒痛湿泻。消水气，行血痹<sup>(1)</sup>，<small>产后血上冲心，及污秽不尽，煎服亦良。</small>通神明，去秽恶，救暴卒，<small>凡中风、中气、中暑、中恶、暴卒等证，姜汁和童便饮效。姜汁开痰，童便降火也</small>。疗狐臭<sup>(2)</sup>，<small>姜汁频涂</small>。搽冻耳。<small>熬膏涂</small>。杀半夏、南星、菌蕈、野禽毒，<small>野禽多食半夏，
 故有毒，生姜能解之</small>。辟雾露山岚瘴气<sup>(3)</sup>。<small>早行含之</small>。捣汁和黄明胶熬,贴风湿痹痛。久食兼酒，则患目发痔，
 <small>积热使然</small>。 疮痈人忌食。秦椒为使，恶黄连、黃芩、
 夜明砂。<small>糟姜纳入蝉蜕，虽老无筋</small>。姜皮，辛凉。和脾行水。治浮肿胀满。<small>以皮行皮，五皮散用之。成无己曰：“姜、枣辛甘，能行脾胃之律液而和营卫，不专于发散也。”东垣曰：夜不食姜者，夜主閤而姜主闢也。秋不食姜者，秋主收而姜主散也。妊妇多食，令儿歧指，象形也。</small>
