--- a/ok/bc/bc01-1.1.13.0.0.md
+++ b/ok/bc/bc01-1.1.13.0.0.md
@@ -11,8 +11,7 @@
 
 **生姜发汗解表，温中降逆，为发表止呕要药**。为姜科多年生草本植物姜的根茎。洗净、切片入药。捣汁名姜汁。单独用皮名生姜皮。	
 
-本品味辛性温，入肺经。散风寒以解表，并能祛痰止咳。常用于外感风寒表证，见恶寒发热，头痛鼻塞及痰多咳嗽等。入胃经，既能温中化湿，又善降逆止呕，前人称“姜为呕家圣药”，所
-以又常用于胃寒或痰湿中阻，以致胃气上逆的恶心呕吐等证。
+本品味辛性温，入肺经。散风寒以解表，并能祛痰止咳。常用于外感风寒表证，见恶寒发热，头痛鼻塞及痰多咳嗽等。入胃经，既能温中化湿，又善降逆止呕，前人称“姜为呕家圣药”，所以又常用于胃寒或痰湿中阻，以致胃气上逆的恶心呕吐等证。
 
 此外，生姜还能调味开胃，以增进食欲，并能解半夏、南星、
 鱼蟹之毒。疗狐臭，搽冻疮，取其辛温之性。
