--- a/ok/pwl/pwl-4-02.md
+++ b/ok/pwl/pwl-4-02.md
@@ -1,7 +1,5 @@
 # 脏气法时升降浮沉补泻图说
 
-
-
-脏气法时升降浮沉补泻图说（图缺）
+![输入图片说明](img%E8%84%8F%E6%B0%94%E6%B3%95%E6%97%B6%E5%8D%87%E9%99%8D%E6%B5%AE%E6%B2%89%E8%A1%A5%E6%B3%BB%E5%9B%BE.png)
 
 五行相生，木、火、土、金、水，循环无端，惟脾无正行，于四季之末各旺一十八日，以生四脏。四季者，辰、戌、丑、未是也。人身形以应九野，左足主立春，丑位是也；左手主立夏，辰位是也；右手主立秋，未位是也；右足主立冬，戌位是也。戌湿，其本气平，其兼气温、凉、寒、热，在人以胃应之；己土，其本味咸，其兼味辛、甘、酸、苦，在人以脾应之。脾胃兼化，其病治之，各从其宜，不可定体；肝肺之病，在水火之间，顺逆传变不同，温凉不定，当求责耳。
